--- a/src/index.html
+++ b/src/index.html
@@ -9,44 +9,66 @@
   <title>Frontend Mentor | Skilled e-learning landing page</title>
 </head>
 <body>
-
-  Get Started
-
-  Maximize skill, minimize budget
-
-  Our modern courses across a range of in-demand skills will give you the 
-  knowledge you need to live the life you want.
-
-  Get Started
-
-  Check out our most popular courses!
-
-  Animation
-  Learn the latest animation techniques to create stunning motion 
-  design and captivate your audience.
-  Get Started
-
-  Design
-  Create beautiful, usable interfaces to help shape the future of 
-  how the web looks.
-  Get Started
-
-  Photography
-  Explore critical fundamentals like lighting, composition, and focus 
-  to capture exceptional photos.
-  Get Started
-
-  Crypto
-  All you need to know to get started investing in crypto. Go from beginner 
-  to advanced with this 54 hour course.
-  Get Started
-
-  Business
-  A step-by-step playbook to help you start, scale, and sustain your business 
-  without outside investment.
-  Get Started
-
-  Get Started
+  <header>
+    <nav>
+      <img src="" alt="">
+      <button>Get Started</button>
+    </nav>
+    <section class="left">
+      <h1>Maximize skill, minimize budget</h1>
+      <p>Our modern courses across a range of in-demand skills will give you the 
+        knowledge you need to live the life you want.</p>
+      <button>Get Started</button>
+    </section>
+    <!-- Image part-->
+    <article>
+      <img src="" alt="">
+    </article>
+  </header>
+  <main class="container">
+    <div class="firstBox">
+      <p>Check out our most popular courses!</p>
+    </div>
+    <div>
+      <img src="" alt="">
+      <h2>Animation</h2>
+      <p>Learn the latest animation techniques to create stunning motion 
+      design and captivate your audience.</p>
+      <a href="">Get Started</a>
+    </div>
+    <div>
+      <img src="" alt="">
+      <h2>Design</h2>
+      <p>Create beautiful, usable interfaces to help shape the future of 
+      how the web looks.</p>
+      <a href="">Get Started</a>
+    </div>
+    <div>
+      <img src="" alt="">
+      <h2>Photography</h2>
+      <p>Explore critical fundamentals like lighting, composition, and focus 
+      to capture exceptional photos.</p>
+      <a href="">Get Started</a>
+    </div>
+    <div>
+      <img src="" alt="">
+      <h2>Crypto</h2>
+      <p>All you need to know to get started investing in crypto. Go from beginner 
+      to advanced with this 54 hour course.</p>
+      <a href="">Get Started</a>
+    </div>
+    <div>
+      <img src="" alt="">
+      <h2> Business</h2>
+      <p>A step-by-step playbook to help you start, scale, and sustain your business 
+      without outside investment.</p>
+      <a href="">Get Started</a>
+    </div>
+  </main>
+  <footer>
+    <img src="" alt="">
+    <a href="">Get Started</a>
+  </footer>
 
 </body>
 </html>
